--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,40 @@
+Wed Jul 27 14:33:03 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Grammar fix.  
+
+Wed Jul 27 14:01:27 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/html/parser/general.c:
+
+	was_body_background is back. Without this bugzilla looks awful.  
+
+Wed Jul 27 13:37:33 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/document/html/parser/general.c:
+
+	head.source is not NULL, so drop the check.  
+
+Wed Jul 27 10:59:59 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/document/html/parser/parse.c:
+
+	Describe code related to bug 696. Drop useless was_body_background
+	assignment. Make it breath.  
+
+Wed Jul 27 10:49:39 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/document/html/parser/general.c:
+
+	Make html_body() call html_html2() to reduce code duplication.  
+
+Wed Jul 27 10:47:09 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/document/html/parser/parse.c:
+
+	Add comment for bug 700 fix.  
+
 Tue Jul 26 14:18:58 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
 
 	* src/document/html/parser/parse.c:
