--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ ELinks now:
 * Python scripting back-end (experimental)
 * 88 colors support
 * external editor is configurable at run-time
+* Default URI-rewrite rule, used when no other rules match but the string
+  that was entered in the Go to URL box does not resemble a URI
+* Support prefixes for add-bookmark-link, document-info, goto-url-current-link,
+  history-move-back, and history-move-forward
 * BitTorrent protocol (experimental)
 * FSP protocol via a CGI script (see contrib/cgi/README.FSP) (experimental)
 * sysmouse support on the BSD console
