--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Aug  7 21:14:04 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/: config.pl, hooks.pl:
+
+	Added a new prefix: send, configured with the 'external' option.  
+
 Sat Aug  6 19:11:08 2005  Russ Rowan <rrowan@dandy.net>:
 
 	* contrib/perl/hooks.pl:
