Update to current option tree and action mappings.

--- a/doc/man/man5/elinkskeys.5
+++ b/doc/man/man5/elinkskeys.5
@@ -544,6 +544,10 @@ auto\-complete
 Attempt to auto\-complete the input\&.
 
 .TP
+auto\-complete\-file
+Attempt to auto\-complete a local file\&.
+
+.TP
 auto\-complete\-unambiguous
 Attempt to unambiguously auto\-complete the input\&.
 
@@ -1092,6 +1096,10 @@ Redraw the terminal (\fIredraw\fR)
 .TP
 \fIAlt\-r\fR
 Toggle regex matching (type\-ahead searching) (\fIsearch\-toggle\-regex\fR)
+
+.TP
+\fICtrl\-F\fR
+Attempt to auto\-complete a local file (\fIauto\-complete\-file\fR)
 
 .TP
 \fICtrl\-R\fR
