--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Aug 26 08:23:47 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: config/timer.c, document/refresh.c, network/progress.c,
+	protocol/bittorrent/connection.c,
+	protocol/bittorrent/peerconnect.c, protocol/bittorrent/tracker.c,
+	util/time.c, util/time.h:
+
+	Handle milliseconds_T calculations through few helpers functions.
+	Take care of possible overflows.  
+
 Thu Aug 25 18:42:10 2005  Russ Rowan <rrowan@dandy.net>:
 
 	* contrib/perl/hooks.pl:
