--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+Sat Sep  3 20:56:58 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Might as well document the usage of 'gotosearch'.  
+
+Sat Sep  3 20:49:16 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Added a Google site search prefix, ss, to search the current or
+	specified domain.  
+
+Fri Sep  2 22:29:50 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	I missed one.  
+
+Fri Sep  2 22:14:12 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Recognize URLs with the port specified as well.  
+
 Fri Sep  2 10:42:19 2005  Laurent Monin <zas@norz.org>:
 
 	* src/network/progress.c:
